<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_padding_medium">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvPoster"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:orientation="vertical"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/img_background_hero">

            <ImageView
                android:id="@+id/ivHero"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/img_logo_dota2"
                android:contentDescription="@string/cd_image_hero"
                android:scaleType="fitCenter"
                android:padding="@dimen/margin_padding_large"/>

        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cvPoster"
        tools:text="@string/tools_name_hero"
        android:lines="1"
        android:ellipsize="end"
        android:layout_marginTop="@dimen/margin_padding_large"
        android:paddingLeft="@dimen/margin_padding_medium"
        android:paddingRight="@dimen/margin_padding_medium"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/tvTagline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvName"
        tools:text="@string/tools_tagline_hero"
        android:lines="1"
        android:ellipsize="end"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/grey_500"
        android:textSize="12sp"
        android:layout_marginBottom="@dimen/margin_padding_medium"
        android:paddingLeft="@dimen/margin_padding_medium"
        android:paddingRight="@dimen/margin_padding_medium"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/tvTagline"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/margin_padding_small">

        <ImageView
            android:id="@+id/ivTypeAttack"
            android:layout_width="match_parent"
            android:layout_height="18dp"
            android:src="@drawable/ic_melee"
            android:contentDescription="@string/cd_type_attact"
            android:layout_marginStart="@dimen/margin_padding_medium"
            android:layout_weight="0.6"/>

        <TextView
            android:id="@+id/tvTypeAttack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/grey_400"
            android:textSize="12sp"
            android:layout_weight="0.3"/>

        <ImageView
            android:id="@+id/ivType"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:src="@drawable/img_strength"
            android:contentDescription="@string/cd_type_attact"
            android:paddingLeft="@dimen/margin_padding_medium"
            android:paddingRight="@dimen/margin_padding_medium"
            android:layout_weight="0.6"
            android:layout_gravity="end"/>

    </LinearLayout>
</RelativeLayout>